// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddToList is empty when allowAdd is false 1`] = `""`;

exports[`AddToList is empty when list is undefined 1`] = `""`;

exports[`AddToList render when allowAdd is true 1`] = `
<div
  className="addbook"
>
  <h2
    className="list-creator__headline mt2"
  >
    Tilføj bøger til listen
  </h2>
  <Connect(BookSearchSuggester)
    list={
      Object {
        "description": "some description",
        "id": 1,
        "list": Array [
          Object {
            "book": Object {
              "creator": "some creator1",
              "pid": "pid1",
              "title": "some title 1",
            },
            "description": "some description1",
            "links": Object {
              "cover": "/cover1",
            },
          },
          Object {
            "book": Object {
              "creator": "some creator2",
              "pid": "pid2",
              "title": "some title 2",
            },
            "description": "some description2",
            "links": Object {
              "cover": "/cover2",
            },
          },
          Object {
            "book": Object {
              "creator": "some creator3",
              "pid": "pid3",
              "title": "some title 3",
            },
            "description": "some description3",
            "links": Object {
              "cover": "/cover3",
            },
          },
        ],
        "title": "some list",
      }
    }
    onSubmit={[Function]}
  />
</div>
`;

exports[`AddToList show add and cancel buttons when selected book is not in list 1`] = `
<div
  className="addbook"
>
  <h2
    className="list-creator__headline mt2"
  >
    Tilføj bøger til listen
  </h2>
  <Connect(BookSearchSuggester)
    list={
      Object {
        "description": "some description",
        "id": 1,
        "list": Array [
          Object {
            "book": Object {
              "creator": "some creator1",
              "pid": "pid1",
              "title": "some title 1",
            },
            "description": "some description1",
            "links": Object {
              "cover": "/cover1",
            },
          },
          Object {
            "book": Object {
              "creator": "some creator2",
              "pid": "pid2",
              "title": "some title 2",
            },
            "description": "some description2",
            "links": Object {
              "cover": "/cover2",
            },
          },
          Object {
            "book": Object {
              "creator": "some creator3",
              "pid": "pid3",
              "title": "some title 3",
            },
            "description": "some description3",
            "links": Object {
              "cover": "/cover3",
            },
          },
        ],
        "title": "some list",
      }
    }
    onSubmit={[Function]}
  />
  <div
    className="item mt4"
  >
    <Component
      item={
        Object {
          "book": Object {
            "creator": "some creator10",
            "pid": "pid10",
            "title": "some title 10",
          },
          "description": "some description10",
          "links": Object {
            "cover": "/cover10",
          },
        }
      }
      key="pid10"
      onChange={[Function]}
    />
    <div
      className="text-right mt1"
    >
      <span
        className="btn btn-default"
        onClick={[Function]}
      >
        Fortryd
      </span>
      <span
        className="btn btn-success ml1"
        onClick={[Function]}
      >
        Tilføj
      </span>
    </div>
  </div>
</div>
`;

exports[`AddToList show error msg when selected books is already in list 1`] = `
<div
  className="addbook"
>
  <h2
    className="list-creator__headline mt2"
  >
    Tilføj bøger til listen
  </h2>
  <Connect(BookSearchSuggester)
    list={
      Object {
        "description": "some description",
        "id": 1,
        "list": Array [
          Object {
            "book": Object {
              "creator": "some creator1",
              "pid": "pid1",
              "title": "some title 1",
            },
            "description": "some description1",
            "links": Object {
              "cover": "/cover1",
            },
          },
          Object {
            "book": Object {
              "creator": "some creator2",
              "pid": "pid2",
              "title": "some title 2",
            },
            "description": "some description2",
            "links": Object {
              "cover": "/cover2",
            },
          },
          Object {
            "book": Object {
              "creator": "some creator3",
              "pid": "pid3",
              "title": "some title 3",
            },
            "description": "some description3",
            "links": Object {
              "cover": "/cover3",
            },
          },
        ],
        "title": "some list",
      }
    }
    onSubmit={[Function]}
  />
  <h4
    className="mt2 mb2 text-center"
  >
    <strong>
      some title 1
    </strong>
     kan ikke tilføjes, da den allerede er i listen
  </h4>
</div>
`;
